infra/vps/k8s/prestage-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warchi-app-tls-prestage
  namespace: arch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.warchi.ru
      secretName: warchi-app-ru-tls
  rules:
    - host: app.warchi.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warchi
                port:
                  number: 80
